# Micro-projet

./: .gitignore  CMakeLists.txt  README.md
doc/: diagrammeDeClasse.pu
src/core/: Button.cpp  Button.h  CMakeLists.txt  Clickable.cpp  Clickable.h  Game.cpp  Game.h  Grid.cpp  Grid.h  MyApp.cpp  MyApp.h  Scene.cpp  Scene.h  TextureManager.cpp  TextureManager.h  myMain.cpp
src/core/Scene/: EndScreen.cpp  EndScreen.h  EnumScene.h  TitleScreen.cpp  TitleScreen.h
src/core/corn/: Corn.cpp  Corn.h  Enemy.cpp  Enemy.h  Friend.cpp  Friend.h  PopCorn.cpp  PopCorn.h
src/main/: CMakeLists.txt
src/test/: CMakeLists.txt  unitTests.cpp
